.charts/kargo/templates/api/deployment.yaml
{ { - if .Values.api.enabled } }
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kargo-api
  namespace: { { .Release.Namespace } }
  labels:
    { { - include "kargo.labels" . | nindent 4 } }
      { { - include "kargo.api.labels" . | nindent 4 } }
spec:
  replicas: { { .Values.api.replicas | default 1 } }
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      { { - include "kargo.selectorLabels" . | nindent 6 } }
        { { - include "kargo.api.labels" . | nindent 6 } }
  template:
    metadata:
      labels:
        { { - include "kargo.selectorLabels" . | nindent 8 } }
          { { - include "kargo.api.labels" . | nindent 8 } }
      annotations:
        configmap/checksum: { { include (print $.Template.BasePath "/api/configmap.yaml") . | sha256sum } }
        secret/checksum: { { include (print $.Template.BasePath "/api/secret.yaml") . | sha256sum } }
    spec:
      serviceAccount: kargo-api
      containers:
        - name: api
          image: { { include "kargo.image" . } }
          imagePullPolicy: { { .Values.image.pullPolicy } }
          command: [ "/usr/local/bin/kargo", "api" ]
          ports:
            - name: h2c
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/grpc_health_probe
                - -addr=:8080
  { { - if .Values.api.tls.enabled } }
- -tls
- -tls-no-verify
  { { - end } }
initialDelaySeconds: 10
readinessProbe:
  exec:
    command:
      - /usr/local/bin/grpc_health_probe
      - -addr=:8080
  { { - if .Values.api.tls.enabled } }
- -tls
- -tls-no-verify
  { { - end } }
initialDelaySeconds: 5
  { { - if or .Values.kubeconfigSecrets.kargo (and .Values.api.oidc.enabled .Values.api.oidc.dex.enabled) .Values.api.tls.enabled } }
volumeMounts:
  - mountPath: /etc/kargo
    name: config
    readOnly: true
  { { - end } }
resources:
  { { - toYaml .Values.api.resources | nindent 12 } }
  { { - if or .Values.kubeconfigSecrets.kargo (and .Values.api.oidc.enabled .Values.api.oidc.dex.enabled) .Values.api.tls.enabled } }
volumes:
  - name: config
    projected:
      sources:
  { { - if .Values.kubeconfigSecrets.kargo } }
- secret:
    name: { { .Values.kubeconfigSecrets.kargo } }
    items:
      - key: kubeconfig.yaml
        path: kubeconfig.yaml
        mode: 0644
  { { - end } }
  { { - if .Values.api.tls.enabled } }
- secret:
    name: kargo-api-cert
    items:
      - key: tls.crt
        path: tls.crt
      - key: tls.key
        path: tls.key
  { { - end } }
  { { - if and .Values.api.oidc.enabled .Values.api.oidc.dex.enabled } }
- secret:
    name: kargo-dex-server-cert
    items:
      - key: ca.crt
        path: idp-ca.crt
  { { - end } }
  { { - end } }
  { { - with .Values.api.nodeSelector } }
nodeSelector:
  { { - toYaml . | nindent 8 } }
  { { - end } }
  { { - with .Values.api.tolerations } }
tolerations:
  { { - toYaml . | nindent 8 } }
  { { - end } }
  { { - end } }
